--- a/README.org
+++ b/README.org
@@ -26,6 +26,65 @@ Cette application permet de
 - et on recommence : la liste des courses peut être utilisée pour mettre à jour
   le contenu du frigo (après avoir fait les courses)
 
+* modele de données
+
+** les entitées
+
+- denrees
+    - id_denree
+    - nom
+    - type
+    - fournisseur
+  - denrees_disponibles
+    - id_denree_disponible
+    - quantite
+    - date_quantitee
+    - date péremption
+    - lieu de stockage
+  - repas
+    - id_repas
+    - date
+    - heure
+    - lieu
+    - id_denrées_disponibles
+    - quantité_utilisée
+  - liste_de_courses
+    - date_courses
+    - id_denree
+    - quantité
+
+- les informations mises à jour par la logique interne du modèle de données (le
+  fonctionnement par défaut) peuvent être modifiées par l'utilisateur à
+  n'importe quel moment
+  - changement de la valeur de denree_disponible:quantitee :
+    - le champ denree_disponible:date_quantitee permet de savoir à quelle date le
+      champ denree_dionible:quantitee est valide et donc de prendre en compte les
+      repas dont la date est postérieure dans le calcul de la quantitee
+  - repas non pris comme prévu :
+    - on remet le repas à plus tard en changeant la date
+    - on supprime le repas : en foncin de la date on remet à jour les
+      quantitées disponibles
+- un trigger doit mettre à jour les quantitées des denrées en fonction de la
+  date du jour et des dates des repas
+- quand la date d'un repas est passée les denrées utilisées ne sont plus
+  disponibles, denrées disponibles = denrée dont la quantitée est > 0
+- on peut rendre indisponible une denrée sans qu'elle soit utilisée dans un
+  repas
+
+- actions automatiques
+
+- actions utilisateur
+  - mise à jour d'une quantitée
+  - création d'un repas
+  - suppression d'un repas
+  - changement de date d'un repas
+  -
+
+- traitement d'une requête
+  - mise à jour du modèle de données
+  - prise en compte de la requête de l'utilisateur
+
+
 J'ai remarqué qu'il ne faut pas être trop rigoureux dans l'utilisation de ce
 système, on n'a pas besoin de tout noter ni d'être très précis :
 - la liste des courses permet de na pas oublier les choses importantes, mais on
